# fleet-ensemble

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs  tutorial.rs
src/: agent.rs  budget.rs  ensemble.rs  error.rs  governor.rs  harmony.rs  key.rs  lib.rs  resolver.rs  role.rs  stream.rs  tempo.rs  ternary.rs
tests/: integration.rs
