[package]
name = "fleet-ensemble"
version = "0.1.0"
edition = "2021"
description = "Multi-agent music coordination engine — the conductor for fleet-midi"
license = "MIT"
repository = "https://github.com/SuperInstance/fleet-ensemble"
keywords = ["music", "ensemble", "agent", "midi", "fleet"]

[dependencies]
serde = { version = "1", features = ["derive"] }
